[package]
name = "geodb-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Server wrapped around gtihub.com/daimaou92/geodb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geodb = {git = "https://github.com/daimaou92/geodb", branch = "main", features = ["cities","asn"]}
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
axum = "0.6.0-rc.4"
maxminddb = "0.23"
