[package]
name = "geodb-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Server wrapped around gtihub.com/daimaou92/geodb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geodb = {git = "https://github.com/daimaou92/geodb", branch = "main", features = ["cities","asn"]}
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
axum = "0.6.0-rc.4"
maxminddb = "0.23"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
prost = {version = "0.11", default-features = false, features=["prost-derive"]}
prost-types = {version = "0.11", default-features = false}
bytes = "1"
tower = "0.4"

[build-dependencies]
prost-build = "0.11.2"
